Opened 16 years ago
Closed 16 years ago
#2870 closed bug (fixed)
"C" headers shouldn't contain "C++" like comments
Reported by: | kaliber | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | andreas.faerber@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
I was trying to build unzip - ftp://ftp.info-zip.org/pub/infozip/src/unzip552.tgz, but it fails due to wrong comments in .h files
At least following headers should be fixed:
Kernel/OS.h Support/ByteOrder.h Support/SupportDefs.h Storage/FindDirectory.h Storage/Mime.h
Attachments (2)
Change History (6)
comment:1 by , 16 years ago
Cc: | added |
---|
comment:2 by , 16 years ago
It is possible to convert comments automatically e.g on Ubuntu:
#!/bin/sh for i in `find . -name '*.h'` do fix=0 grep "class" $i || fix=1 if [ "$fix" = 1 ] then mv $i $i.bak ccmtcnvt $i.bak > $i rm -f $i.bak fi done
by , 16 years ago
Attachment: | ticket2870.diff added |
---|
patch to fix comments in OS.h, ByteOrder.h, FindDirectory.h and Mime.h
comment:3 by , 16 years ago
Patch applied in hrev28598. Thanks! Can this be closed then, or is there more?
by , 16 years ago
Attachment: | header-patch.diff added |
---|
this patch is the result of running kaliber's script on the os header folder
comment:4 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
The last patch is pretty much useless, as most of these headers are in fact C++ headers, and there is no reason not to use those comments in there.
I guess we can consider this bug fixed.
In #2203 I provided a patch to fix the POSIX headers for freetype, you could do the same for the headers you need for unzip. :)